Devops_lab/docker-registry/ingress-with-tls.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/tls-acme: 'true'
  name: docker-registry
  namespace: docker-registry
spec:
  tls:
  - hosts:
    - registry.private.net
    secretName: registry-tls
  rules:
  - host: registry.private.net
    http:
      paths:
      - backend:
          serviceName: docker-registry
          servicePort: 5000
        path: /
...
